Fixed #2674 - Additional scrollbar is shown in small windows

--- a/packages/survey-creator-core/src/utils/layout.scss
+++ b/packages/survey-creator-core/src/utils/layout.scss
@@ -20,6 +20,10 @@
   overflow: auto;
 }
 
+.svc-flex-grow {
+  flex-grow: 1;
+}
+
 .svc-flex-column {
   display: flex;
   flex-direction: column;
